# Levenshtein-Distance

./: CMakeLists.txt  README.md  main.cpp
data/: constants.h  dictionary.h
models/: LevenshteinModel.cpp  LevenshteinModel.h  model.h  model1.cpp  model2.cpp  model3.cpp
models/storage/: IGridStorage.h  flattenedMatrix.cpp  flattenedMatrix.h  naiveMatrix.cpp  naiveMatrix.h  rollingMatrix.cpp  rollingMatrix.h
src/: main.cpp
